# ccstock

./: .gitignore  CMakeLists.txt  README.md  README_BK.md  \
config/: ccstock.xml  dc.xml  mail.xml
demo/: example.html  example_anim.js
doc/: .vimrc  程序结构.md
src/: CMakeLists.txt  ccstock.cpp  ccstock_config.h  mdsim.h
src/as/tools/: email.h
src/common/: common_defs.h  common_func.h  configurator.h  encoding.h  io_aux.h  logger.h  utility.h
src/common/file/: README.md  file_handler.h
src/common/system/: cctime.cpp  cctime.h  datetime.h
src/cow/: .encoding.h.swp  configurator.h  encoding.h  logger.h  utility.h
src/datacenter/: CMakeLists.txt  dc.cpp  dc_service.cpp  dc_service.h
src/datacenter/client/: history_client.h
src/datacenter/db/: history_db.cpp  history_db.h  persistent_kv_db.h
src/datacenter/instrument/: yahoo_history_data.h
src/datacenter/tools/: history.h  yahoo_history_handler.h
src/gateway/: client.h  code_crawler.h  common_crawler.h  crawler.h  market_data_crawler.h  sina_decoder.h  stock.h  yahoo_history_crawler.h
src/muridae/: client.h  crawler.h  sina_decoder.h  stock.h
src/simulator/: cmd_display.h  code_initializer.h  common_defs.h  file_handler.h  history_client.h  io_aux.h  market_data_client.h  option_manager.h
src/simulator/instrument/: code_db.h  stock.h
src/simulator/ui/: systime.h  text_based_interface.h  ui_common.h
src/test/: CMakeLists.txt  libcurl.h  libev.h  local.h  t_common.h  t_filehandler.h  t_leveldb.h  t_ncurses.h  test_ev.cpp  test_main.cpp
src/tiger/: cmd_display.h  common_defs.h  defs.h  file_handler.h  io_aux.h
