cmake_minimum_required (VERSION 2.6)
project (CCSTOCK)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET( CMAKE_BUILD_TYPE Debug )

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(src/test)
ADD_SUBDIRECTORY(src/datacenter)